--- a/docker-compose-file/Qa/docker-compose.yml
+++ b/docker-compose-file/Qa/docker-compose.yml
@@ -1,6 +1,19 @@
 services:
+  keycloak:
+    image: quay.io/keycloak/keycloak:22.0.1
+    container_name: keycloak
+    ports:
+      - 7080:8080
+    environment:
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "admin"
+    command: "start-dev"
+    extends:
+        file: common-config.yml
+        service: network-deploy-service
+
   configserver:
-    image: "vermaji9045/configserver:s9"
+    image: "vermaji9045/configserver:s11"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -15,7 +28,7 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-    image: "vermaji9045/eurekaserver:s9"
+    image: "vermaji9045/eurekaserver:s11"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -32,27 +45,23 @@ services:
       SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-    image: "vermaji9045/accounts:s9"
-    container_name: accounts-ms
-    ports:
-      - "8081:8081"
-    healthcheck:
-      test: "curl --fail --silent localhost:8081/actuator/health/readiness | grep UP || exit 1"
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 10s
-    environment:
-      SPRING_APPLICATION_NAME: "accounts"
-    extends:
-      file: common-config.yml
-      service: microservice-eureka-config
+        image: "vermaji9045/accounts:s11"
+        container_name: accounts-ms
+        healthcheck:
+          test: "curl --fail --silent localhost:8081/actuator/health/readiness | grep UP || exit 1"
+          interval: 10s
+          timeout: 5s
+          retries: 10
+          start_period: 10s
+        environment:
+          SPRING_APPLICATION_NAME: "accounts"
+        extends:
+          file: common-config.yml
+          service: microservice-eureka-config
 
   cards:
-    image: "vermaji9045/cards:s9"
+    image: "vermaji9045/cards:s11"
     container_name: cards-ms
-    ports:
-      - "8080:8080"
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -66,10 +75,8 @@ services:
       service: microservice-eureka-config
 
   loans:
-    image: "vermaji9045/loans:s9"
+    image: "vermaji9045/loans:s11"
     container_name: loans-ms
-    ports:
-      - "8060:8060"
     healthcheck:
       test: "curl --fail --silent localhost:8060/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -83,7 +90,7 @@ services:
       service: microservice-eureka-config
 
   gatewayserver:
-    image: "vermaji9045/gatewayserver:s9"
+    image: "vermaji9045/gatewayserver:s11"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
@@ -96,6 +103,8 @@ services:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
+      OTEL_SERVICE_NAME: "gatewayserver"
+      SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: "http://keycloak:8080/realms/master/protocol/openid-connect/certs"
     extends:
       file: common-config.yml
       service: microservice-eureka-config
