--- a/docker-compose-file/Prod/docker-compose.yml
+++ b/docker-compose-file/Prod/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+
+  rabbit:
+    image: rabbitmq:3.12-management
+    hostname: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: rabbitmq-diagnostics check_port_connectivity
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
   keycloak:
     image: quay.io/keycloak/keycloak:22.0.1
     container_name: keycloak
@@ -13,7 +29,7 @@ services:
         service: network-deploy-service
 
   configserver:
-    image: "vermaji9045/configserver:s11"
+    image: "vermaji9045/configserver:s13"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -28,7 +44,7 @@ services:
       service: microservice-base-config
 
   eurekaserver:
-    image: "vermaji9045/eurekaserver:s11"
+    image: "vermaji9045/eurekaserver:s13"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -45,7 +61,7 @@ services:
       SPRING_APPLICATION_NAME: "eurekaserver"
 
   accounts:
-        image: "vermaji9045/accounts:s11"
+        image: "vermaji9045/accounts:s13"
         container_name: accounts-ms
         healthcheck:
           test: "curl --fail --silent localhost:8081/actuator/health/readiness | grep UP || exit 1"
@@ -55,52 +71,54 @@ services:
           start_period: 10s
         environment:
           SPRING_APPLICATION_NAME: "accounts"
+          OTEL_SERVICE_NAME: "accounts"
+          SPRING_RABBITMQ_HOST: "rabbit"
         extends:
           file: common-config.yml
           service: microservice-eureka-config
 
-  cards:
-    image: "vermaji9045/cards:s11"
-    container_name: cards-ms
-    healthcheck:
-      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 10s
-    environment:
-      SPRING_APPLICATION_NAME: "cards"
-    extends:
-      file: common-config.yml
-      service: microservice-eureka-config
-
-  loans:
-    image: "vermaji9045/loans:s11"
-    container_name: loans-ms
-    healthcheck:
-      test: "curl --fail --silent localhost:8060/actuator/health/readiness | grep UP || exit 1"
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 10s
-    environment:
-      SPRING_APPLICATION_NAME: "loans"
-    extends:
-      file: common-config.yml
-      service: microservice-eureka-config
+#  cards:
+#    image: "vermaji9045/cards:s13"
+#    container_name: cards-ms
+#    healthcheck:
+#      test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+#      start_period: 10s
+#    environment:
+#      SPRING_APPLICATION_NAME: "cards"
+#    extends:
+#      file: common-config.yml
+#      service: microservice-eureka-config
+#
+#  loans:
+#    image: "vermaji9045/loans:s13"
+#    container_name: loans-ms
+#    healthcheck:
+#      test: "curl --fail --silent localhost:8060/actuator/health/readiness | grep UP || exit 1"
+#      interval: 10s
+#      timeout: 5s
+#      retries: 10
+#      start_period: 10s
+#    environment:
+#      SPRING_APPLICATION_NAME: "loans"
+#    extends:
+#      file: common-config.yml
+#      service: microservice-eureka-config
 
   gatewayserver:
-    image: "vermaji9045/gatewayserver:s11"
+    image: "vermaji9045/gatewayserver:s13"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
     depends_on:
       accounts:
         condition: service_healthy
-      loans:
-        condition: service_healthy
-      cards:
-        condition: service_healthy
+#      loans:
+#        condition: service_healthy
+#      cards:
+#        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "gatewayserver"
       OTEL_SERVICE_NAME: "gatewayserver"
@@ -108,6 +126,18 @@ services:
     extends:
       file: common-config.yml
       service: microservice-eureka-config
+  message:
+    image: "vermaji9045/message:s13"
+    container_name: message-ms
+    depends_on:
+      rabbit:
+        condition: service_healthy
+    environment:
+     SPRING_RABBITMQ_HOST: "rabbit"
+    extends:
+         file: common-config.yml
+         service: network-deploy-service
+
 
 networks:
   eazybank:
