--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -76,11 +76,24 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
 
 
 	</dependencies>
@@ -106,7 +119,7 @@
 				<version>3.3.2</version>
 				<configuration>
 					<to>
-						<image>vermaji9045/${project.artifactId}:s11</image>
+						<image>vermaji9045/${project.artifactId}:s14</image>
 					</to>
 				</configuration>
 			</plugin>
